# viberot

./: .gitignore  Cargo.toml  PATH_RESOLUTION.md  README.md  build.bat  build.rs  install.bat  uninstall.bat
actions/example/: info.py
actions/overlay/: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tauri.conf.json
actions/overlay/src/: lib.rs  main.rs
actions/overlay/src-frontend/: README.md  index.html
actions/overlay/src-tauri/: Cargo.toml  tauri.conf.json
actions/overlay/src-tauri/src/: lib.rs
design/: README.md  action_plugins.md  core_service.md  milestones.md  platform_probes.md
docs/: shell-probe.md  synthetic-pids.md
examples/tiktok/: package-lock.json  package.json
examples/tiktok/src/: index.html
examples/tiktok/src-tauri/: Cargo.toml  tauri.conf.json
examples/tiktok/src-tauri/src/: lib.rs  main.rs
scripts/: shell_integration.sh  viberot.sh
spinner-plugin/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  SpinnerPlugin.csproj
src/: action_orchestrator.rs  config.rs  config_watcher.rs  event_bus.rs  main.rs  rule_engine.rs  windows.rs
src/platform/: linux_shell.rs  mod.rs  posix_shell.rs  stub.rs  windows_etw.rs
windows-probe/: Program.cs  WindowsProbe.csproj
