[package]
name = "command-sidekick"
version = "0.1.0"
edition = "2021"
authors = ["Command-Sidekick Team"]
description = "A configurable utility to run actions based on command execution"
license = "MIT"

[[bin]]
name = "sidekick-core"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# File watching for config reload
notify = "6.0"

# Wildcard matching
globset = "0.4"

# Directories
dirs = "5.0"
tasklist = "0.3.1"

# Windows-specific dependencies for ETW
[target.'cfg(windows)'.dependencies]
ferrisetw = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading", 
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
] }
widestring = "1.0"
