[package]
name = "command-sidekick"
version = "0.1.0"
edition = "2021"
authors = ["Command-Sidekick Team"]
description = "A configurable utility to run actions based on command execution"
license = "MIT"
build = "build.rs"

[[bin]]
name = "sidekick-core"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
globset = "0.4"
dirs = "5.0"
tasklist = "0.3.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# File watching for config reload
notify = "6.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

# Windows-specific dependencies for ETW
[target.'cfg(windows)'.dependencies]
ferrisetw = "1.0"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading", 
    "Win32_System_Diagnostics_Etw",
    "Win32_Security",
] }
widestring = "1.0"
